RESOLVED FIXED142184
Deduplicate slow path calling code in JITOpcodes.cpp/JITOpcodes32_64.cpp
https://bugs.webkit.org/show_bug.cgi?id=142184
Summary Deduplicate slow path calling code in JITOpcodes.cpp/JITOpcodes32_64.cpp
Filip Pizlo
Reported 2015-03-02 11:30:26 PST
Patch forthcoming.
Attachments
the patch (8.77 KB, patch)
2015-03-02 11:33 PST, Filip Pizlo
msaboff: review+
Filip Pizlo
Comment 1 2015-03-02 11:33:34 PST
Created attachment 247684 [details] the patch
Michael Saboff
Comment 2 2015-03-02 11:34:54 PST
Comment on attachment 247684 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=247684&action=review r=me > Source/JavaScriptCore/ChangeLog:7 > + Patch description?
Filip Pizlo
Comment 3 2015-03-02 11:38:08 PST
(In reply to comment #2) > Comment on attachment 247684 [details] > the patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=247684&action=review > > r=me > > > Source/JavaScriptCore/ChangeLog:7 > > + > > Patch description? The bug title describes it completely, no?
Filip Pizlo
Comment 4 2015-03-02 14:53:47 PST
Note You need to log in before you can comment on or make changes to this bug.